Fix image overlapping on modile ~0

--- a/src/app/components/member/member.component.css
+++ b/src/app/components/member/member.component.css
@@ -29,7 +29,7 @@ button {
 }
 
 img {
-  position: absolute;
+  position: relative;
 }
 
 .description-text {
